# pyvideo

./: .editorconfig  .gitignore  .gitmodules  .travis.priv.enc  .travis.sh  .travis.yml  CONTRIBUTORS.rst  MAINTAINERS  Makefile  README.md  README.rst  article_maker.py  check_links.py  errors.txt  pelicanconf.py  publishconf.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  run_random_links.sh  sort_events.sh  tox.ini  travis.enc
.github/workflows/: deploy-preview.yml  deploy-production.yml
.ssh/: keys.tgz.enc  preview.enc  production.enc
content/extra/: CNAME
content/pages/: about.rst  domain-change.rst  search.rst  thank-you-contributors.rst  thanks-will-and-sheila.rst
content/pygotham/: test.rst
data/boston-python-meetup/: marshall-weir---boston-python-meetup-testing-where-do-i-start.json  stephan-richter---boston-python-meetup-how-to-test-the-hard-stuff.json
data/chicago-djangonauts/: adam-jenkins---django-nonrel-intro-and-state.json  brad-martsberger---formsets-concurrent-edits-and-uncaught-exceptions.json  george-kappel---django-rest-framework-and-angularjs.json  greg-baugues---how-my-dog-sends-selfies.json  joe-jasinski---consuming-tasks-with-celery.json  joe-jasinski---mongoengine-basics.json  (+3 more)
metadata/: metadata.yml
plugins/: aggregations.py  drop_no_publish.py  event_info.py  event_series.py  json_reader.py  redirect.py  replace_underscore.py  writer.py
requirements/: dev.in  dev.txt  tests.in  tests.txt
tests/: pages.py  test_a11y.py  test_peertube.py
tools/: random_link.py  used_links.txt
(+3420 files in other folders)
