[tool.poetry]
name = "pyvideo"
version = "0.1.0"
description = ""
authors = ["Paul Logston <paul.logston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "3.6.3"
pelican-alias = "1.1"
pelican-extended-sitemap = "1.0.2"
Jinja2 = "2.11.2"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.8.2"
requests = "^2.23.0"
lxml = "^4.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
